user Authorization and Authentication as well as changes for swagger set up.
