# routes/swagger.js
@@ -2,7 +2,15 @@ const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 
-router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+router.use(
+  '/api-docs',
+  // #swagger.ignore=true
+  swaggerUi.serve
+);
+router.get(
+  '/api-docs',
+  // #swagger.ignore=true
+  swaggerUi.setup(swaggerDocument)
+);
 
 module.exports = router;
